Twenty Fourteen: fix too-wide search "jump to" link and provide focus on the search input when it's used. Closes #25592. Built from https://develop.svn.wordpress.org/trunk@26691
git-svn-id: http://core.svn.wordpress.org/trunk@26581 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfourteen/style.css
+++ b/wp-content/themes/twentyfourteen/style.css
@@ -903,10 +903,6 @@ span + .edit-link:before,
 	width: 100%;
 }
 
-.search-toggle .screen-reader-text {
-	right: 0; /* This makes sure a horizontal scrollbar won't appear */
-}
-
 
 /**
  * 5.0 Navigation
